--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
-        "php": "^7.0"
+       "php": "^7.1",
+       "zendframework/zend-http": "^2.8.2"
     },
     "autoload": {
         "psr-4": { "Towersystems\\Pinpayments\\": "" }
