--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
        "zendframework/zend-http": "^2.8.2"
     },
     "autoload": {
-        "psr-4": { "Towersystems\\Pinpayments\\": "" }
+        "psr-4": { "Towersystems\\PinPayments\\": "" }
     }
 }
