--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     },
     "autoload": {
         "psr-4": { "Towersystems\\PinPayments\\": "" }
+    },
+     "branch-alias": {
+            "dev-master": "1.0.0.x-dev"
     }
 }
